--- a/appendix_a.Rmd
+++ b/appendix_a.Rmd
@@ -48,6 +48,9 @@ theSheet <- theSheet[theSheet$Table == "Data",]
 theSheetGroups <- unique(theSheet$Group)
 
 kbl(theSheet[,4:10], caption = "CDM simulated variable summary", align = "l",) %>%
+
+# There are 16 groups to be added...
+
   pack_rows(theSheetGroups[1],
             min(which(theSheet$Group == theSheetGroups[1])),
             max(which(theSheet$Group == theSheetGroups[1])),
@@ -73,6 +76,57 @@ kbl(theSheet[,4:10], caption = "CDM simulated variable summary", align = "l",) %
             max(which(theSheet$Group == theSheetGroups[6])),
             background = '#ebebeb') %>%
 
+  pack_rows(theSheetGroups[7],
+            min(which(theSheet$Group == theSheetGroups[7])),
+            max(which(theSheet$Group == theSheetGroups[7])),
+            background = '#ebebeb') %>%   
+
+  pack_rows(theSheetGroups[8],
+            min(which(theSheet$Group == theSheetGroups[8])),
+            max(which(theSheet$Group == theSheetGroups[8])),
+            background = '#ebebeb') %>%
+  
+  pack_rows(theSheetGroups[9],
+            min(which(theSheet$Group == theSheetGroups[9])),
+            max(which(theSheet$Group == theSheetGroups[9])),
+            background = '#ebebeb') %>%
+  
+  pack_rows(theSheetGroups[10],
+            min(which(theSheet$Group == theSheetGroups[10])),
+            max(which(theSheet$Group == theSheetGroups[10])),
+            background = '#ebebeb') %>%   
+
+  pack_rows(theSheetGroups[11],
+            min(which(theSheet$Group == theSheetGroups[11])),
+            max(which(theSheet$Group == theSheetGroups[11])),
+            background = '#ebebeb') %>%
+
+  pack_rows(theSheetGroups[12],
+            min(which(theSheet$Group == theSheetGroups[12])),
+            max(which(theSheet$Group == theSheetGroups[12])),
+            background = '#ebebeb') %>%
+
+  pack_rows(theSheetGroups[13], 
+            min(which(theSheet$Group == theSheetGroups[13])),
+            max(which(theSheet$Group == theSheetGroups[13])),
+            background = '#ebebeb') %>%
+
+  pack_rows(theSheetGroups[14],
+            min(which(theSheet$Group == theSheetGroups[14])),
+            max(which(theSheet$Group == theSheetGroups[14])),
+            background = '#ebebeb') %>%
+
+  pack_rows(theSheetGroups[15],
+            min(which(theSheet$Group == theSheetGroups[15])),
+            max(which(theSheet$Group == theSheetGroups[15])),
+            background = '#ebebeb') %>%
+
+  pack_rows(theSheetGroups[16],
+            min(which(theSheet$Group == theSheetGroups[16])),
+            max(which(theSheet$Group == theSheetGroups[16])),
+            background = '#ebebeb') %>%
+
+            
 row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
   kable_styling(full_width = F,font_size = 10) %>%
   column_spec(2, width_min = "7em") %>%
